--- a/src/main/resources/templates/hotList-details.html
+++ b/src/main/resources/templates/hotList-details.html
@@ -106,7 +106,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-9">
-                                    <!-- Category -->
+                                    <!-- Product Type -->
                                     <div class="tab-content-text">
                                         <h th:text="${hotList.getProductType()}"></h>
                                     </div>
@@ -122,7 +122,12 @@
                                 </div>
                                 <div class="col-lg-9">
                                     <div class="tab-content-text">
-                                        <h th:text="${hotList.getCategories().get(0).getName()}"></h>
+                                        <div th:if="${hotList.getCategories().size()>0}">
+                                            <td th:text="${hotList.getCategoryName()}"></td>
+                                        </div>
+                                        <div th:unless="${hotList.getCategories().size()>0}">
+                                            <div>-</div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
