--- a/src/main/resources/static/styles/single-product.css
+++ b/src/main/resources/static/styles/single-product.css
@@ -4641,7 +4641,8 @@ a {
 
 .review_item p {
     padding-top: 10px;
-    margin-bottom: 0px
+    margin-bottom: 0px;
+    word-wrap: break-word;
 }
 
 .review_item.reply {
