--- a/src/main/resources/templates/profile/_review.html
+++ b/src/main/resources/templates/profile/_review.html
@@ -51,8 +51,9 @@
                         <div class="media-body">
                             <h5 class="review_date date"
                                 th:text="${#dates.format(review.getUploadDate(), 'dd-MM-yyyy')}"></h5>
-                            <!-- TODO empty -->
-                            <h4 th:text="${review.getReviewTitle()}"></h4>
+                            <span th:if="${review.getReviewTitle() != null}">
+                                <h4 th:text="${review.getReviewTitle()}"></h4>
+                            </span>
                             <i class="review_star fa"
                                th:classappend="${review.getScoreOutOf5() >= 1} ? 'fa-star' : 'fa-star-o'"></i>
                             <i class="review_star fa"
@@ -71,11 +72,12 @@
                 <!-- Product -->
                 <div class="col-lg-4 vertical_center">
 
-                    <div class="row vertical_center">
-                        <div class="col-lg-10 vertical_center">
-                            <div class="product-row d-flex flex-lg-row flex-column align-items-lg-center align-items-start justify-content-start mr-auto">
-                                <a th:href="@{/product}">
+                    <div class="row">
+                        <div class="col-lg-10">
+                            <div class="product-row d-flex">
+                                <a th:href="@{'/product/' + ${review.getProductId()}}">
                                     <div>
+                                        <!-- TODO -->
                                         <div class="product_image"><img th:src="@{/static/images/seker_portakali.jpg}"
                                                                         alt=""
                                                                         class="product_image_img">
@@ -83,9 +85,35 @@
                                     </div>
                                     <div class="product_name_container">
                                         <div class="review-product-name txt-left"><a
-                                                th:href="@{/product}">My Sweet Orange Tree</a>
+                                                th:text="${productService.get(review.getProductId()).getProductName()}"
+                                                th:href="@{'/product/' + ${review.getProductId()}}"></a>
                                         </div>
-                                        <div class="review-product-text">José Mauro de Vasconcelos</div>
+
+                                        <!-- Book, E-Book, Audio Book -->
+                                        <span th:if="${productService.get(review.getProductId()).getProductTypeName() == 'Book' ||
+                                                    productService.get(review.getProductId()).getProductTypeName() == 'E-Book' ||
+                                                    productService.get(review.getProductId()).getProductTypeName() == 'Audio Book'}">
+                                            <div class="review-product-text">
+                                                <span th:each="a, iterStat : ${productService.get(review.getProductId()).getAuthors()}"
+                                                      th:text="!${iterStat.last} ? ${a} + ', ': ${a}"></span>
+                                            </div>
+                                        </span>
+
+                                        <!-- E-Book Reader -->
+                                        <span th:if="${productService.get(review.getProductId()).getProductTypeName() == 'E-Book Reader'}">
+                                            <div class="review-product-text"
+                                                 th:text="${productService.get(review.getProductId()).getReaderBrand()}">
+                                            </div>
+                                        </span>
+
+                                        <!-- E-Book Reader Case, Book Case -->
+                                        <span th:if="${productService.get(review.getProductId()).getProductTypeName() == 'E-Book Reader Case' ||
+                                                    productService.get(review.getProductId()).getProductTypeName() == 'Book Case'}">
+                                            <div class="review-product-text"
+                                                 th:text="${productService.get(review.getProductId()).getCaseBrand()}">
+                                            </div>
+                                        </span>
+
                                     </div>
                                 </a>
                             </div>
@@ -95,7 +123,7 @@
                             <button type="submit" value="&#xf014;"
                                     class="delete_review trans_200 fa product_text" name="delete_review"
                                     th:id="${review.getReviewId()}" title="Delete this review"
-                                    style="font-size: 25px; color: #4a4a4a"
+                                    style="font-size: 24px; color: #4a4a4a; display: block"
                                     data-toggle="collapse">
                                 &#xf014;
                             </button>
@@ -176,5 +204,35 @@
 
 <script th:src="@{/static/js/input-mask.js}"></script>
 
+<script>
+    $('.delete_review').click(function (event) {
+        var ret = {
+            reviewId: $(this).attr("id")
+        };
 
+        if (confirm('Are you sure you want to delete?')) {
+            event.preventDefault();
+            $.post("/profile/review/", ret, function (data) {
+                iziToast.show({
+                    title: 'Success',
+                    message: 'Review deleted successfully.',
+                    position: 'topRight',
+                    color: 'green'
+                });
+                window.location.href = "/profile#review";
+                setTimeout(function () {
+                    history.pushState(null, null, ' ');
+                }, 100);
 
+            }).fail(function (data) {
+                iziToast.show({
+                    title: 'Fail',
+                    message: data.responseText,
+                    position: 'topRight',
+                    color: 'red'
+                });
+                window.location.href = "/profile#review";
+            })
+        }
+    });
+</script>
