--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -137,7 +137,8 @@
                                     </span>
                                     </div>  <!-- when no sale &nbsp; -->
                                 </div>
-                                <div class="product_price" th:text="'₺' + ${product.getPrice()}"></div>
+                                <div class="product_price"
+                                     th:text="'₺' + ${#numbers.formatDecimal(product.getPrice(), 0, 'COMMA', 2, 'POINT')}"></div>
 
                                 <div class="product_text">
                                     <span th:if="${product.getProductTypeName() == 'Book' || product.getProductTypeName() == 'E-Book' || product.getProductTypeName() == 'Audio Book'}">
@@ -706,11 +707,27 @@
                                                     <div class="media">
                                                         <div class="media-body">
                                                             <div class="row">
-                                                                <div class="col-lg-9">
-                                                                    <h5 class="review_date date"
-                                                                        th:text="${#dates.format(review.getUploadDate(), 'dd-MM-yyyy')}"></h5>
-                                                                    <!-- TODO empty -->
-                                                                    <h4 th:text="${review.getReviewTitle()}"></h4>
+                                                                <div class="col-lg-12">
+                                                                    <div>
+                                                                        <h5 class="review_date date" style="float:left;"
+                                                                            th:text="${#dates.format(review.getUploadDate(), 'dd-MM-yyyy')}"></h5>
+                                                                        <!-- Delete button -->
+                                                                        <div sec:authorize="hasRole('ROLE_ADMIN')">
+                                                                            <button type="submit" value="&#xf014;"
+                                                                                    class="delete_review trans_200 fa"
+                                                                                    name="delete_review"
+                                                                                    th:id="${review.getReviewId()}"
+                                                                                    title="Delete this review"
+                                                                                    style="font-size: 24px; color: #4a4a4a; float: right"
+                                                                                    data-toggle="collapse">
+                                                                                &#xf014;
+                                                                            </button>
+                                                                        </div>
+                                                                    </div>
+
+                                                                    <span th:if="${review.getReviewTitle() != null}">
+                                                                        <h4 th:text="${review.getReviewTitle()}"></h4>
+                                                                    </span>
                                                                 </div>
                                                             </div>
                                                             <i class="review_star fa"
@@ -1207,7 +1224,7 @@
 
     $('#add_review').click(function (event) {
         var ret = {
-            type: "review",
+            type: "add_review",
             id: productID,
             productId: productID,
             reviewTitle: $('#review_title').val(),
@@ -1224,9 +1241,50 @@
                     position: 'topRight',
                     color: 'green'
                 });
+                window.location.href = "/product/" + productID + "#information";
+                setTimeout(function () {
+                    history.pushState(null, null, ' ');
+                }, 100);
 
             }).fail(function (data) {
 
+                if (data.responseText === "") {
+                    <!-- TODO -->
+                    window.location.href = "/login";
+                } else {
+                    iziToast.show({
+                        title: 'Fail',
+                        message: data.responseText,
+                        position: 'topRight',
+                        color: 'red'
+                    });
+                }
+            })
+        }
+    });
+
+    $('.delete_review').click(function (event) {
+        var ret = {
+            type: "delete_review",
+            id: productID,
+            reviewId: $(this).attr("id")
+        };
+
+        if (confirm('Are you sure you want to delete?')) {
+            event.preventDefault();
+            $.post("/product/" + productID, ret, function (data) {
+                iziToast.show({
+                    title: 'Success',
+                    message: 'Review deleted successfully.',
+                    position: 'topRight',
+                    color: 'green'
+                });
+                window.location.href = "/product/" + productID + "#information";
+                setTimeout(function () {
+                    history.pushState(null, null, ' ');
+                }, 100);
+
+            }).fail(function (data) {
                 if (data.responseText === "") {
                     <!-- TODO -->
                     window.location.href = "/login";
