--- a/src/main/resources/static/styles/user-details.css
+++ b/src/main/resources/static/styles/user-details.css
@@ -224,7 +224,9 @@ tr:nth-child(even) {
 
 .review_item .col-lg-8 .media .media-body {
     vertical-align: middle;
-    align-self: center
+    align-self: center;
+    overflow: hidden;
+    word-wrap: break-word;
 }
 
 .review_item .col-lg-8 .media .media-body h4 {
