coupon tab added

--- a/src/main/resources/templates/admin-panel.html
+++ b/src/main/resources/templates/admin-panel.html
@@ -96,12 +96,12 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link profile-navbar-text" data-url="/admin-panel/review" th:href="@{#review}">Reviews</a>
+                        <a class="nav-link profile-navbar-text" data-url="/admin-panel/message" th:href="@{#message}">Send
+                            Message</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link profile-navbar-text" data-url="/admin-panel/message" th:href="@{#message}">Send
-                            Message</a>
+                        <a class="nav-link profile-navbar-text" data-url="/admin-panel/coupon" th:href="@{#coupon}">Coupons</a>
                     </li>
                 </ul>
                 <br>
@@ -129,11 +129,11 @@
                     <!-- Pending Order -->
                     <div class="tab-pane" id="pending-order"></div>
 
-                    <!-- Reviews -->
-                    <div class="tab-pane" id="review"></div>
-
                     <!-- Message -->
                     <div class="tab-pane" id="message"></div>
+
+                    <!-- Coupons -->
+                    <div class="tab-pane" id="coupon"></div>
                 </div>
             </div>
         </section>
