--- a/src/main/resources/templates/user_details/_search.html
+++ b/src/main/resources/templates/user_details/_search.html
@@ -43,37 +43,37 @@
 
                 <!-- Previous button -->
                     <li th:style="${currentPage == 1} ? 'display:none'">
-                        <a th:href="@{/admin-panel#search(size=${keyPage.size}, page=${currentPage - 1})}"
+                        <a th:href="@{/user-details/{id}#search(size=${keyPage.size}, id=${user.userId}, page=${currentPage - 1})}"
                            aria-label="Previous" title="Previous Page" rel="tooltip">
-                            <i class="fa fa-angle-left" style="font-size:24px; color: #fbaa1d; font-weight: bold;"></i>
+                            <i class="pagination_arrow fa fa-angle-left"></i>
                         </a>
                     </li>
 
                 <!-- First page -->
                     <li th:if="${keyPage.totalPages > 0}"
                         th:class="${currentPage == 1} ? 'active'">
-                        <a th:href="@{/admin-panel#search(size=${keyPage.size}, page=${1})}"
+                        <a th:href="@{/user-details/{id}#search(size=${keyPage.size}, id=${user.userId}, page=${1})}"
                            th:title="${'Page '+ 1}"
                            th:text="${1}" style="color: #fbaa1d;">
                         </a>
                     </li>
 
-                    <li th:if="${currentPage - 3 > 1}"
-                        style="color: #fbaa1d; pointer-events:none; background-color: transparent;">...</li>
+                   <li th:if="${currentPage - 3 > 1}" class="pagination_dots">...</li>
 
                 <!-- Pages -->
                     <li th:if="${keyPage.totalPages > 2}"
                         th:each="i : ${#numbers.sequence(currentPage - 2 > 1 ? currentPage - 2 : 2
                                         , keyPage.totalPages > 2 + currentPage ? currentPage + 2 : keyPage.totalPages - 1, 1)}"
                         th:class="${currentPage == i} ? 'active'">
+                        <a th:href="@{/user-details/{id}#search(size=${keyPage.size}, id=${user.userId}, page=${1})}"
+                           th:text="${i}" th:title="${'Page '+ i}" style="color: #fbaa1d;"></a>
 
-                    <li th:if="${currentPage + 3 < keyPage.totalPages}"
-                        style="color: #fbaa1d; pointer-events:none; background-color: transparent;">...</li>
+                     <li th:if="${currentPage + 3 < keyPage.totalPages}" class="pagination_dots">...</li>
 
                 <!-- Last page -->
                     <li th:if="${keyPage.totalPages > 1}"
                         th:class="${currentPage == keyPage.totalPages} ? 'active'">
-                        <a th:href="@{/admin-panel#search(size=${keyPage.size}, page=${keyPage.totalPages})}"
+                        <a th:href="@{/user-details/{id}#search(size=${keyPage.size}, id=${user.userId}, page=${keyPage.totalPages})}"
                            th:text="${keyPage.totalPages}" style="color: #fbaa1d;"
                            th:title="${'Page '+ keyPage.totalPages}">
                         </a>
@@ -81,9 +81,9 @@
 
                 <!-- Next button -->
                     <li th:style="${currentPage == keyPage.totalPages} ? 'display:none'">
-                        <a th:href="@{/admin-panel#search(size=${keyPage.size}, page=${currentPage + 1})}"
+                        <a th:href="@{/user-details/{id}#search(size=${keyPage.size}, id=${user.userId}, page=${currentPage + 1})}"
                            aria-label="Next" title="Next Page" rel="tooltip">
-                            <i class="fa fa-angle-right" style="font-size:24px; color: #fbaa1d; font-weight: bold;"></i>
+                            <i class="pagination_arrow fa fa-angle-right"></i>
                         </a>
                     </li>
 
